--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "emittery": "^0.7.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "ava": "^3.12.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "semantic-release": "^17.1.1",
     "sinon": "^9.0.3",
-    "xo": "^0.33.0"
+    "xo": "^0.35.0"
   },
   "commitlint": {
     "extends": [
@@ -37,6 +37,6 @@
     }
   },
   "lint-staged": {
-    "*.ts": "xo --fix"
+    "*.{d.ts,js}": "xo --fix"
   }
 }
